# AlmondShell

./: .gitignore  AlmondShell.sln  CMakeLists.txt  LICENSE  README.md  changelog.txt  vcpkg.json
AlmondShell/: AlmondShell.vcxitems  AlmondShell.vcxitems.filters  CMakeLists.txt  CMakePresets.json  Doxyfile  Engine.vcxitems  Engine.vcxitems.filters  build.sh  clean.sh  install.sh  run.sh  vcpkg.json
AlmondShell/docs/: aengineconfig_flags.md  context_audit.md  engine_analysis.md  file_structure.txt  filelist.txt  menu_overlay_backend_audit.md  renderer_regression_plan.md  runtime_operations.md
AlmondShell/examples/: AlmondShell.vcxproj  AlmondShell.vcxproj.filters
AlmondShell/examples/ConsoleApplication1/: ConsoleApplication1.vcxproj  main.cpp
AlmondShell/examples/ConsoleApplication1/assets/legacy_menu_atlas/: README.md
AlmondShell/examples/Example_Android_StaticLibrary1/: CMakeLists.txt
AlmondShell/examples/Example_CMake_Project1/: CMakeLists.txt
AlmondShell/examples/Example_ConsoleApplication/: Example_ConsoleApplication.vcxproj  Example_ConsoleApplication.vcxproj.filters  main.cpp
AlmondShell/examples/Example_ConsoleApplication/src/: Example_ConsoleApplication.cpp
AlmondShell/examples/Example_Dll1/: Example_Dll1.vcxproj
AlmondShell/examples/Example_Mod_Dll1/: Example_Mod_Dll1.vcxproj
AlmondShell/examples/Example_Mod_Dll1/src/: Example_Mod_DLL1.cpp  Example_Mod_DLL1.h
AlmondShell/examples/Example_StaticLib1/: Example_StaticLib1.vcxproj
AlmondShell/examples/Example_WindowsProject1/: Example_WindowsProject1.vcxproj
AlmondShell/examples/StaticLib1/: StaticLib1.cpp  StaticLib1.vcxproj
AlmondShell/include/: a2048like.hpp  aallocator.hpp  aapplicationmodule.hpp  aatlasmanager.hpp  aatlastexture.hpp  aatomicfunction.hpp  abuildsystem.hpp  acellularsim.hpp  acodeinspector.hpp  acommandline.hpp  acommandqueue.hpp  acompiler.hpp  acontext.hpp  acontextcontrol.hpp  acontextmultiplexer.hpp  acontextrenderer.hpp  acontextstate.hpp  acontextstatemanager.hpp  acontexttype.hpp  acontextwindow.hpp  adiagnostics.hpp  aecs.hpp  aeditor.hpp  aenduserapplication.hpp  aengine.hpp  aenginebindings.hpp  aengineconfig.hpp  aenginehandles.hpp  aenginesystems.hpp  aentity.hpp  aentitycomponentmanager.hpp  aentitycomponents.hpp  aentityhistory.hpp  aeventsystem.hpp  afilewatch.hpp  afontrenderer.hpp  aframework.hpp  afroggerlike.hpp  agamecore.hpp  agui.hpp  (+80 more)
AlmondShell/modules/: aengine.engine_components.ixx  aengine.ixx  aengine.platform.ixx  aengine.renderers.ixx
AlmondShell/shaders/: fragment_shader.glsl  vert.glsl  vertex_shader.glsl
AlmondShell/src/: AlmondCore.cpp  AlmondShell.cpp  AlmondShell.h  AsyncPluginManager.h  ContextFactory.cpp  ContextFactory.h  ContextFunctions.cpp  Context_Concept.h  Context_Renderer.cpp  Context_Renderer.h  Context_Renderer_OpenGL.cpp  Context_Renderer_OpenGL.h  Context_Window.h  Context_Window_GLFW.cpp  Engine.cpp  Engine.h  EngineConfig.h  EntryPoint.cpp  EntryPoint.h  EntryPoint_Android.h  EntryPoint_Crossplatform.cpp  EntryPoint_Crossplatform.h  EntryPoint_Headless.cpp  EntryPoint_Headless.h  EntryPoint_Wasm.cpp  EntryPoint_Wasm.h  EntryPoint_Win32.cpp  EntryPoint_Win32.h  EntryPoint_X11.cpp  EntryPoint_X11.h  EventManager.h  EventSystem.cpp  EventSystem.h  Exports_DLL.cpp  Exports_DLL.h  GLFWContext.cpp  GLFWContext.h  ImageLoader.cpp  ImageLoader.h  LoadSave.cpp  (+110 more)
AlmondShell/src/glad/: glad.h
AlmondShell/src/scripts/: editor_launcher.ascript.cpp
AlmondShell/unix/: stylesheet.css
Changes/: changelog.txt  release_notes_v0.62.1.md  release_notes_v0.62.7.md  release_notes_v0.70.0.md  release_notes_v0.70.4.md  roadmap.txt
Example_ConsoleApplication/: Example_ConsoleApplication.vcxproj
Example_ConsoleApplication/src/: Example_ConsoleApplication.cpp
Example_Dll1/: Example_Dll1.vcxproj  Example_Mod_DLL1.cpp  Example_Mod_DLL1.h
Example_Dll1/src/: dllmain.cpp
Example_Mod_Dll1/: Example_Mod_Dll1.vcxproj
Example_StaticLib1/: Example_StaticLib1.vcxproj
Example_WindowsProject1/: Example_WindowsProject1.vcxproj
Tools/: almondshell_install_build_tools.ps1  almondshell_install_gui.ps1  howtouse.txt  install_build_tools.bat
